fix: update dep and secure more
